<resources>
    <string name="app_name">MFA</string>
    <string name="app_id">140646612752259</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_game_logo">GameLogo</string>
    <string name="desc">Image in the game</string>
    <string name="title_activity_main_menu">MainMenu</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_options">Options</string>
    <string name="title_activity_high_scores">HighScores</string>
    <string name="title_activity_hits">Hits</string>
    <string name="title_activity_credits">Credits</string>
    <string name="title_activity_new_game_options">NewGameOptions</string>
    <string name="title_activity_choose_rival">ChooseRival</string>
    <string name="title_activity_light_thread">LightThread</string>
    <string name="choose_rival_hit_type">Example Hit</string>
    <string name="choose_rival_player_stats">Example Hit</string>
    <string name="choose_rival_include_message">Send Message With?</string>
    <string name="choose_rival_is_active">Hit Available</string>
    <string name="choose_rival_send_hit">-----SEND-----</string>
    <string name="choose_rival_activity_player_select">XML_Options_Menu</string>
    <string name="choose_rival_player_type">Player Type</string>
    <string name="hits_hits">HITS</string>
    <string name="hits_cash">Cash :</string>
    <string name="hits_purchase_hit">PURCHASE HIT</string>
    <string name="hits_money">1000</string>
    <string name="hits_hit_type">Example Hit</string>
    <string name="new_game_options_standard_game">Standard </string>
    <string name="new_game_options_custom_game">Custom </string>
    <string name="Christian">demo</string>
    <string name="all_hits_menus_next_hit">Next Hit</string>
    <string name="all_hits_menus_prev_hit">Prev Hit</string>
    <string name="all_hits_menus_purchase">Purchase</string>
    <string name="all_hits_menus_send">Send</string>
    <string name="all_hits_menus_cash_word">Cash: </string>
    <string name="all_hits_menus_cash_amount">0</string>
    <string name="hits_0_description">This hit sends a Massive Alien, shooting god knowswhat, into your opponents level . Surely they will not prevail at the jaws of this beast.</string>
    <string name="hits_0_name">Demon Alien</string>
    <string name="hits_0_cost">10000</string>
    <string name="hits_1_description">This hit sends a small sezid asteroid carrening into the opponents level and rasonable speeds with the hopes of them meeting it head on.</string>
    <string name="hits_1_name">Asteroid Small</string>
    <string name="hits_1_cost">1000</string>
    <string name="hits_2_description">This hit sends a medium size asteroid carrening into the opponents level  and high speeds qwith the hopes of them meeting it head on.</string>
    <string name="hits_2_name">Asteroid Medium</string>
    <string name="hits_2_cost">2000</string>
    <string name="hits_3_name">Follow AI</string>
    <string name="hits_3_cost">5000</string>
    <string name="hits_3_description">Follow AI</string>
    <string name="hits_4_description">This hit sends a murder of aliens.</string>
    <string name="hits_4_name">Small AI Pack</string>
    <string name="hits_4_cost">5000</string>
    <string name="hits_5_description">This hit sends a pride of aliens.</string>
    <string name="hits_5_name">Large AI Pack</string>
    <string name="hits_5_cost">10000</string>
    <string name="hits_6_description">This hit sends mines, watch the fuck out.</string>
    <string name="hits_6_name">Mines</string>
    <string name="hits_6_cost">2000</string>
    <string name="hits_7_name">Alien Cannon</string>
    <string name="hits_7_description">Alien Cannon</string>
    <string name="hits_7_cost">Alien Cannon</string>
    <string name="hits_8_name">Alien Cannon</string>
    <string name="hits_8_description">Alien Cannon</string>
    <string name="hits_8_cost">Alien Cannon</string>
    <string name="hits_9_name">Alien Cannon</string>
    <string name="hits_9_description">Alien Cannon</string>
    <string name="hits_9_cost">Alien Cannon</string>
    <string name="hits_10_name">Alien Cannon</string>
    <string name="hits_10_description">Alien Cannon</string>
    <string name="hits_10_cost">Alien Cannon</string>
    <string name="hits_11_name">Alien Cannon</string>
    <string name="hits_11_description">Alien Cannon</string>
    <string name="hits_11_cost">Alien Cannon</string>
    <string name="hits_12_name">Alien Cannon</string>
    <string name="hits_12_description">Alien Cannon</string>
    <string name="hits_12_cost">Alien Cannon</string>
    <string name="hits_13_name">Alien Cannon</string>
    <string name="hits_13_description">Alien Cannon</string>
    <string name="hits_13_cost">Alien Cannon</string>
    <string name="hits_14_name">Alien Cannon</string>
    <string name="hits_14_description">Alien Cannon</string>
    <string name="hits_14_cost">Alien Cannon</string>
    <string name="hits_15_name">Alien Cannon</string>
    <string name="hits_15_description">Alien Cannon</string>
    <string name="hits_15_cost">Alien Cannon</string>
    <string name="title_activity_custom_game_options">CustomGameOptions</string>
    <string name="title_activity_new_menu">NewMenu</string>
    <string name="title_activity_hit0_menu">"Hit0Menu"   </string>
    <string name="title_activity_hit1_menu">"Hit1Menu"   </string>
    <string name="title_activity_hit2_menu">"Hit2Menu"   </string>
    <string name="title_activity_market">Market</string>
    <string name="title_activity_game">Game</string>
    <string name="title_activity_game_over">GameOver</string>
    <string name="title_activity_hit4_menu">Hit4Menu</string>
    <string name="title_activity_hit5_menu">Hit5Menu</string>
    <string name="title_activity_hit6_menu">Hit6Menu</string>
    <string name="Market_Item_0_Name">1000 SpaceBucks</string>
    <string name="Market_Item_0_Price">1$</string>
    <string name="Market_Item_0_Description">Currency for in game use</string>
    <string name="Market_Item_1_Name">Light Green</string>
    <string name="Market_Item_1_Price">100</string>
    <string name="Market_Item_1_Description">The Color for use in explosions, thrusters text and lights</string>
    <string name="Market_Item_2_Name">Dark Green</string>
    <string name="Market_Item_2_Price">100</string>
    <string name="Market_Item_2_Description">The Color for use in explosions, thrusters text and lights</string>
    <string name="Market_Item_3_Name">Light Blue</string>
    <string name="Market_Item_3_Price">100</string>
    <string name="Market_Item_3_Description">The Color for use in explosions, thrusters text and lights</string>
    <string name="Market_Item_4_Name">Dark Blue</string>
    <string name="Market_Item_4_Price">100</string>
    <string name="Market_Item_4_Description">The Color for use in explosions, thrusters text and lights</string>
    <string name="Market_Item_5_Name">Purple</string>
    <string name="Market_Item_5_Price">100</string>
    <string name="Market_Item_5_Description">The Color for use in explosions, thrusters text and lights</string>
    <string name="Market_Item_6_Name">Pink</string>
    <string name="Market_Item_6_Price">100</string>
    <string name="Market_Item_6_Description">The Color for use in explosions, thrusters text and lights</string>
    <string name="Market_Item_7_Name">Classic Ship</string>
    <string name="Market_Item_7_Price">10</string>
    <string name="Market_Item_7_Description">The Classic ship image for use in game</string>
    <string name="Market_Item_8_Name">Classic Badass Ship</string>
    <string name="Market_Item_8_Price">10</string>
    <string name="Market_Item_8_Description">The Classic Badass ship image for use in game</string>
    <string name="Market_Item_9_Name">Weird Ship</string>
    <string name="Market_Item_9_Price">10</string>
    <string name="Market_Item_9_Description">The Weird ship image for use in game</string>
    <string name="Market_Item_10_Name">Alien Ship</string>
    <string name="Market_Item_10_Price">10</string>
    <string name="Market_Item_10_Description">The Alien ship image for use in game</string>
    <string name="Market_Item_11_Name">Asteroid Ship</string>
    <string name="Market_Item_11_Price">10</string>
    <string name="Market_Item_11_Description">The Asteroid ship image for use in game</string>
    <string name="Market_Item_12_Name">Ship 6</string>
    <string name="Market_Item_12_Price">10</string>
    <string name="Market_Item_12_Description">The ship 6 image for use in game</string>
    <string name="Market_Item_13_Name">Ship 7</string>
    <string name="Market_Item_13_Price">10</string>
    <string name="Market_Item_13_Description">The Classic ship image for use in game</string>
    <string name="Market_Item_14_Name">Ship 8</string>
    <string name="Market_Item_14_Price">10</string>
    <string name="Market_Item_14_Description">The Classic ship image for use in game</string>
    <string name="Market_Item_15_Name">Ship 9</string>
    <string name="Market_Item_15_Price">10</string>
    <string name="Market_Item_15_Description">The Classic ship image for use in game</string>
    <string name="Market_Item_16_Name">Ship 10</string>
    <string name="Market_Item_16_Price">10</string>
    <string name="Market_Item_16_Description">The Classic ship image for use in game</string>
    <string name="Market_Item_17_Name"> Shoot Faster </string>
    <string name="Market_Item_17_Price">1</string>
    <string name="Market_Item_17_Description"> Allows the player to always have the powerup that allows for faster shooting. Custom games only</string>
    <string name="Market_Item_18_Name"> Slow Motion </string>
    <string name="Market_Item_18_Price">1</string>
    <string name="Market_Item_18_Description"> Allows the player to always have the powerup that allows for slow motion. Custom games only </string>
    <string name="Market_Item_19_Name"> Sine Wave Bullets </string>
    <string name="Market_Item_19_Price">1</string>
    <string name="Market_Item_19_Description"> Allows the player to always have the powerup that allows for sine wave bullets. Custom games only </string>
    <string name="Market_Item_20_Name"> Intense Game </string>
    <string name="Market_Item_20_Price">1</string>
    <string name="Market_Item_20_Description"> Allows the player to play the game in intense mode. Custom games only </string>
    <string name="Market_Item_21_Name"> God Mode </string>
    <string name="Market_Item_21_Price">1</string>
    <string name="Market_Item_21_Description">  Allows the player to be invincible. Custom games only  </string>
    <string name="Market_Item_22_Name"> Demon Alien </string>
    <string name="Market_Item_22_Price">1</string>
    <string name="Market_Item_22_Description">  Allows the player to send the hit after themselves. Custom games only  </string>
    <string name="Market_Item_23_Name"> Small Asteroid </string>
    <string name="Market_Item_23_Price">1</string>
    <string name="Market_Item_23_Description">  Allows the player to send the hit after themselves. Custom games only  </string>
    <string name="Market_Item_24_Name"> Large Asteroid </string>
    <string name="Market_Item_24_Price">1</string>
    <string name="Market_Item_24_Description"> Allows the player to send the hit after themselves. Custom games only  </string>
    <string name="Market_Item_25_Name"> Follow AI </string>
    <string name="Market_Item_25_Price">1</string>
    <string name="Login">Login</string>
    <string name="Email">Email   </string>
    <string name="Password">Password</string>
    <string name="Cancel">Cancel</string>
    <string name="ConfirmPassword">Re-Password</string>
    <string name="Register">Register</string>
    <string name="UserName">UserName</string>
    <string name="HaveAccount">Have Account</string>
    <string name="DontHaveAccount">No Account</string>
</resources>