<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1" >

        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="7dp"
            android:layout_marginRight="25dp"
            android:layout_marginTop="4dp"
            android:layout_weight="1"
            android:text="@string/HaveAccount"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <Button
            android:id="@+id/LoginDialog_Login"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:layout_marginRight="7dp"
            android:layout_marginTop="4dp"
            android:text="@string/Login" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1" >

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="7dp"
            android:layout_marginRight="25dp"
            android:layout_marginTop="4dp"
            android:layout_weight="1"
            android:text="@string/DontHaveAccount"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <Button
            android:id="@+id/LoginDialog_Register"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:layout_marginRight="7dp"
            android:layout_marginTop="4dp"
            android:text="@string/Register" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0" >

        <Button
            android:id="@+id/Login_dialog_cancel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="7dp"
            android:layout_marginRight="7dp"
            android:layout_marginTop="7dp"
            android:text="@string/Cancel" />

    </LinearLayout>

</LinearLayout>